# Video2Poses

./: .dockerignore  .gitignore  .gitmodules  README.md  pyproject.toml
configs/service/: mapanything_infer_service.yaml  mapanything_infer_service_4gpu.yaml
docker/: entrypoint.sh  mapanything-service.Dockerfile
scripts/: run_mapanything_service_docker.sh  run_pose_visualizer.py  run_video_pose_cli.py
service/: mapanything_service.py  run_mapanything_service.py  service.md
tests/: test_chunk_planner.py  test_pose_alignment.py  test_pose_visualizer.py  test_scheduler.py  test_video_io.py  test_video_pipeline.py
video2poses/: __init__.py  adaptive_scheduler.py  batch_pipeline.py  chunk_planner.py  design.md  frame_extractor.py  image_pose_cli.md  image_pose_cli.py  inference_runner.py  pose_alignment.py  pose_visualizer.py  video_io.py  video_pipeline.py  video_pose_types.py
